<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/signup"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/darkBlueUPT"
        android:textSize="@dimen/titleSize" />
    <CustomComponents.EditText
        android:id="@+id/nameEditText"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginStart="20dp"
        app:text="@string/name"
        app:inputTypes="normalText">

    </CustomComponents.EditText>
    <CustomComponents.EditText
        android:id="@+id/surnameEditText"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginStart="20dp"
        app:text="@string/surname"
        app:inputTypes="normalText">

    </CustomComponents.EditText>
    <CustomComponents.EditText
        android:id="@+id/emailEditText"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_marginStart="20dp"
        app:text="@string/email"
        app:inputTypes="emailMode">
    </CustomComponents.EditText>
    <CustomComponents.BlueSpinner
        android:id="@+id/accountSpinner"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp"
        android:layout_marginStart="22dp"
        app:spinnertext="@string/accounttype">

    </CustomComponents.BlueSpinner>

    <CustomComponents.BlueButton
        android:id="@+id/nextPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="580dp"
        app:buttontext="@string/next">

    </CustomComponents.BlueButton>

</RelativeLayout>