<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/studentacc"
        android:textColor="@color/darkBlueUPT"
        android:textSize="@dimen/titleSize" />
    <CustomComponents.EditText
        android:id="@+id/phoneNumberText"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginStart="20dp"
        app:text="@string/phoneNumber"
        app:inputTypes="phoneNumberMode">

    </CustomComponents.EditText>
    <CustomComponents.BlueSpinner
        android:id="@+id/blueDormSpinner"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:layout_marginStart="22dp"
        app:spinnertext="@string/studentdorm"
        app:spinnerContent="dorms">

    </CustomComponents.BlueSpinner>
    <CustomComponents.EditText
        android:id="@+id/roomNumberText"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:layout_marginStart="20dp"
        app:text="@string/studentroom"
        app:inputTypes="numericMode">

    </CustomComponents.EditText>


    <CustomComponents.EditText
        android:id="@+id/passwordText"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="390dp"
        android:layout_marginStart="20dp"
        app:text="@string/password"
        app:inputTypes="passwordMode">

    </CustomComponents.EditText>
    <CustomComponents.EditText
        android:id="@+id/confirmPasswdText"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="490dp"
        android:layout_marginStart="20dp"
        app:text="@string/reenterpassword"
        app:inputTypes="passwordMode">
    </CustomComponents.EditText>


    <CustomComponents.BlueButton
        android:id="@+id/finishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="595dp"
        app:buttontext="@string/finish">

    </CustomComponents.BlueButton>

    <ProgressBar
        android:id="@+id/blueProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="179dp"
        android:visibility="gone"
        android:layout_marginBottom="46dp" />

</RelativeLayout>