<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="274dp"
        android:layout_height="219dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="62dp"
        app:srcCompat="@drawable/logo" />
    <CustomComponents.EditText
        android:id="@+id/emailTextBox"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="250dp"
        app:inputTypes="emailMode"
        />
    <CustomComponents.EditText
        android:id="@+id/passwordTextBox"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="350dp"
        app:text="@string/password"
        app:inputTypes="passwordMode"
        />

    <CustomComponents.BlueButton
        android:id="@+id/logInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="470dp"
        app:buttontext="@string/login">

    </CustomComponents.BlueButton>
    <TextView
        android:id="@+id/textViewAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="560dp"
        android:layout_marginStart="115dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/account" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/textViewAcc"
        android:layout_marginTop="560dp"
        android:layout_marginStart="3dp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/darkBlueUPT"
        android:text="@string/signup" />
    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="590dp"
        android:layout_marginStart="140dp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/darkBlueUPT"
        android:text="@string/forgotPassword" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="55dp"
        android:visibility="gone"/>

</RelativeLayout>